# griffe-inherited-method-crossrefs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
griffe_inherited_method_crossrefs/: __init__.py
src/griffe_inherited_method_crossrefs/: __init__.py
