#:schema https://json.schemastore.org/pyproject.json
[project]
authors = [{ email = "matt.l.laporte@gmail.com", name = "Matt Laporte" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Topic :: Documentation",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = ["griffe>=0.38"]
description = "Griffe extension to replace docstrings of inherited methods with cross-references to parent"
keywords = []
license = { file = "LICENSE" }
name = "griffe-inherited-method-crossrefs"
readme = "README.md"
requires-python = ">=3.9"
urls = { Repository = "https://github.com/mlprt/griffe-inherited-method-crossrefs" }
version = "0.0.1.4"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build]
include = ["griffe_inherited_method_crossrefs/*"]
